# RsOptimalGizmo

./: CMakeLists.txt  compcost.csv  compdata.csv  optimal_gizmo_server.cpp  perkdata.csv  readme.md
cmd/: cmd_search.cpp
rs/: Component.cpp  Component.h  Gizmo.cpp  Gizmo.h  InventionCalc.cpp  InventionCalc.h  InventionData.cpp  InventionData.h  InventionTypes.h  OptimalGizmo.cpp  OptimalGizmo.h  OptimalGizmoSearch.cpp  OptimalGizmoSearch.h  Perk.cpp  Perk.h  Probability.h  RSSort.h
